--- a/tao.css
+++ b/tao.css
@@ -82,8 +82,8 @@ body {
 /* Color */
 
 body {
-  color: #000;
-  background-color: #ffe;
+  color: #)))000;
+  background-color: #FFFFF0;
 }
 
 a:link, a:active, a:hover {
